[gd_scene load_steps=9 format=3 uid="uid://bdpldl31ejvat"]

[ext_resource type="Material" uid="uid://34l72f47cf51" path="res://10_BOARD/00_BOOK/Symbols_page_mat.tres" id="1_6mfeg"]
[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Symbols_page_setup.gd" id="1_ld7t3"]
[ext_resource type="Material" uid="uid://x843rfporykk" path="res://10_BOARD/00_BOOK/Symbols_drawing_mat.tres" id="2_2ts6d"]
[ext_resource type="Script" path="res://10_BOARD/00_BOOK/Show_this_page.gd" id="2_gkitr"]
[ext_resource type="Script" path="res://10_BOARD/Take_Object.tres.gd" id="4_mjwsd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dcs32"]
size = Vector3(1.20793, 0.204437, 1.15437)

[sub_resource type="PlaneMesh" id="PlaneMesh_xucn0"]

[sub_resource type="PlaneMesh" id="PlaneMesh_h7gm3"]
size = Vector2(0.08, 0.1)

[node name="Stick_prefab" type="Area3D"]
script = ExtResource("1_ld7t3")

[node name="Select_this" type="Node" parent="."]
script = ExtResource("4_mjwsd")

[node name="Show_this_page_off" type="Node" parent="."]
script = ExtResource("2_gkitr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.0881049, 0, 0, 0, 0.0881049, 0, 0, 0, 0.0881049, 0.000701554, 0.00694066, 0.000198896)
shape = SubResource("BoxShape3D_dcs32")

[node name="Symbols_page_prefab" type="Node3D" parent="."]

[node name="Render_page" type="MeshInstance3D" parent="Symbols_page_prefab"]
transform = Transform3D(0.0462045, 0, 0, 0, 0.00764964, 0, 0, 0, 0.0462045, 0, 0.00156209, 0)
layers = 2
mesh = SubResource("PlaneMesh_xucn0")
surface_material_override/0 = ExtResource("1_6mfeg")

[node name="Render_symbols" type="MeshInstance3D" parent="Symbols_page_prefab"]
transform = Transform3D(1.31462, 0, 0, 0, 1.31462, 0, 0, 0, 1.31462, 0, 0.00334347, 0.00966043)
layers = 2
mesh = SubResource("PlaneMesh_h7gm3")
surface_material_override/0 = ExtResource("2_2ts6d")

[connection signal="on_click" from="Select_this" to="Select_this" method="_on_on_click"]
[connection signal="show_this_page" from="Show_this_page_off" to="Symbols_page_prefab" method="_on_show_this_page_show_this_page"]
